--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
-    font: 14px "Century Gothic", Futura, sans-serif;
+    /* font: 14px "Century Gothic", Futura, sans-serif; */
+    font: 14px, Arial, Helvetica, sans-serif;
     margin: 20px;
 }
 
@@ -17,37 +18,27 @@ ol, ul {
     margin-bottom: 10px;
 }
 
-.square-red {
-    background: #933;
-    color: #fff;
-    border: 1px solid #999;
-    float: left;
-    font-size: 24px;
-    font-weight: bold;
-    line-height: 39px;
-    height: 39px;
-    margin-right: -1px;
-    margin-top: -1px;
-    padding: 0;
-    text-align: center;
-    width: 39px;
+.wrapper {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-gap: 0px;
+    grid-auto-rows: minmax(39px, auto);
 }
 
-.square-black {
-    background: #000;
-    color: #fff;
+.square{
     border: 1px solid #999;
     float: left;
-    font-size: 24px;
-    font-weight: bold;
+    font-size: 56px;
+    font-weight: 400;
     line-height: 39px;
-    height: 39px;
+    height: 100px;
     margin-right: -1px;
     margin-top: -1px;
     padding: 0;
     text-align: center;
-    width: 39px;
+    width: 100px;
 }
+
 
 .square-red:focus .square-black:focus {
     outline: none;
